src/objects/Education_History__c.object
<CustomObject>
    <description>Represents the education history for a person at an education institution</description>
    <fields>
        <fullName>Accreditation__c</fullName>
        <formula>TEXT(Educational_Institution__r.Accreditation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accreditation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Best_School_Name__c</fullName>
        <formula>IF( NOT(ISBLANK( Educational_Institution__c )), Educational_Institution__r.Name ,  School_Not_Found_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Best School Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEEB_Code__c</fullName>
        <description>CEEB Code from related Educational Institution</description>
        <formula>Educational_Institution__r.CEEB_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CEEB Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>The person for this education history record</description>
        <inlineHelpText>The person for this education history record</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Education Histories</relationshipLabel>
        <relationshipName>Education_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credits_Earned__c</fullName>
        <label>Credits Earned</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <label>Degree</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Degree_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Date_Received__c</fullName>
        <label>Date Document Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Display_to_Applicant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display to Applicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Status_Description__c</fullName>
        <label>Document Status Description</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Official</fullName>
                </value>
                <value>
                    <fullName>Official, not final</fullName>
                </value>
                <value>
                    <fullName>Unofficial, received by email</fullName>
                </value>
                <value>
                    <fullName>Unofficial, open envelope</fullName>
                </value>
                <value>
                    <fullName>Unofficial, score on transcript</fullName>
                </value>
                <value>
                    <fullName>Unofficial, see notes</fullName>
                </value>
                <value>
                    <fullName>Not Yet Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <label>Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mandatory</fullName>
                    <default>true</default>
                    <label>Mandatory</label>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
                <value>
                    <fullName>Conditional</fullName>
                </value>
                <value>
                    <fullName>Not Received</fullName>
                </value>
                <value>
                    <fullName>Purged</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Educational_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Educational Institution for this education history. This should be a Educational Institution Account record.</description>
        <inlineHelpText>The Educational Institution for this education history</inlineHelpText>
        <label>Educational Institution</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Educational Institution</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Education Histories</relationshipLabel>
        <relationshipName>Education_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Electronic_Transcript__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electronic Transcript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Name_On_Transcript__c</fullName>
        <description>The full name of the person on the transcription for this education record</description>
        <inlineHelpText>The full name of the person on the transcription for this education record</inlineHelpText>
        <label>Full Name On Transcript</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPA_Weighted__c</fullName>
        <label>GPA Weighted</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GPA__c</fullName>
        <label>GPA</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Graduation_Date__c</fullName>
        <label>Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Graduation_Year__c</fullName>
        <label>Graduation Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Year_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_School_Class_Size__c</fullName>
        <label>High School Class Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_School_Percentile__c</fullName>
        <formula>(1 - High_School_Rank__c/High_School_Class_Size__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>High School Percentile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>High_School_Rank__c</fullName>
        <label>High School Rank</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Holding_Name__c</fullName>
        <description>The holding name for the school if an Education Institution Account is not found. Required EASY field for a custom object</description>
        <inlineHelpText>The holding name for the school</inlineHelpText>
        <label>Holding Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major__c</fullName>
        <label>Major</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minnesota_MARSS_Number__c</fullName>
        <label>Minnesota MARSS Number</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Org_Link__c</fullName>
        <formula>IF( 
NOT(ISBLANK(Previous_Id__c)), 
&quot;https://bethel-university-old.my.salesforce.com/&quot;+ Previous_Id__c, 
&quot;&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old Org Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Comments__c</fullName>
        <label>Portal Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Id__c</fullName>
        <description>Specifies a previous id if any</description>
        <externalId>true</externalId>
        <label>Previous Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_GPA_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary GPA Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Returns Record Type as text.</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current Record Type.</inlineHelpText>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object_JSON__c</fullName>
        <description>Required EASY field for a custom object</description>
        <inlineHelpText>Required EASY field for a custom object</inlineHelpText>
        <label>Related Object JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>School_CEEB__c</fullName>
        <description>CEEB code of related School, if it exists.</description>
        <formula>Educational_Institution__r.CEEB_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CEEB code of related School, if it exists.</inlineHelpText>
        <label>School CEEB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_City__c</fullName>
        <description>City of related School, if it exists.</description>
        <formula>Educational_Institution__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>City of related School, if it exists.</inlineHelpText>
        <label>School City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Country__c</fullName>
        <description>Country of related School, if it exists.</description>
        <formula>Educational_Institution__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Country of related School, if it exists.</inlineHelpText>
        <label>School Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Not_Found_City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Not_Found_Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Not_Found_Name__c</fullName>
        <label>School Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Not_Found_State__c</fullName>
        <label>State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Not_Found_Street__c</fullName>
        <label>Street Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Not_Found_Zip__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Not_Found__c</fullName>
        <defaultValue>false</defaultValue>
        <label>School Not Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_State__c</fullName>
        <description>State of related School, if it exists.</description>
        <formula>Educational_Institution__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>State of related School, if it exists.</inlineHelpText>
        <label>School State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Street_Address__c</fullName>
        <description>Street address of related School, if it exists.</description>
        <formula>Educational_Institution__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Street address of related School, if it exists.</inlineHelpText>
        <label>School Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Zip_Code__c</fullName>
        <description>Zip code of related School, if it exists.</description>
        <formula>Educational_Institution__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zip code of related School, if it exists.</inlineHelpText>
        <label>School Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScoreLink__c</fullName>
        <label>ScoreLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Transcript_Evaluation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transcript Evaluation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of education institution or school for this education history</description>
        <inlineHelpText>The type of education institution or school for this education history</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>College</fullName>
                </value>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>Church</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Undergraduate_Degree__c</fullName>
        <label>Undergraduate Degree</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Degree_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unofficial_GPA__c</fullName>
        <description>The unofficial GPA for this educational institute specified by the applicant.</description>
        <inlineHelpText>The unofficial GPA for this educational institute specified by the applicant.</inlineHelpText>
        <label>Unofficial GPA</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unofficial_Received_Date_1__c</fullName>
        <label>Unofficial Received Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unofficial_Received_Date_2__c</fullName>
        <label>Unofficial Received Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Created__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Required EASY field for a custom object</description>
        <inlineHelpText>Required EASY field</inlineHelpText>
        <label>User Created</label>
        <type>Checkbox</type>
    </fields>
    <label>Education History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Best_School_Name__c</columns>
        <columns>Contact__c</columns>
        <columns>Type__c</columns>
        <columns>Document_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Churches</fullName>
        <columns>NAME</columns>
        <columns>Best_School_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Graduation_Year__c</columns>
        <columns>Major__c</columns>
        <columns>Document_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Church</value>
        </filters>
        <label>Churches</label>
    </listViews>
    <listViews>
        <fullName>Colleges</fullName>
        <columns>NAME</columns>
        <columns>Best_School_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Graduation_Year__c</columns>
        <columns>Major__c</columns>
        <columns>Document_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>College</value>
        </filters>
        <label>Colleges</label>
    </listViews>
    <listViews>
        <fullName>High_Schools</fullName>
        <columns>NAME</columns>
        <columns>Best_School_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Graduation_Year__c</columns>
        <columns>Major__c</columns>
        <columns>Document_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>High School</value>
        </filters>
        <label>High Schools</label>
    </listViews>
    <nameField>
        <displayFormat>EH-{000000}</displayFormat>
        <label>Education History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Education Histories</pluralLabel>
    <recordTypes>
        <fullName>Church</fullName>
        <active>true</active>
        <description>Represents a Church</description>
        <label>Church</label>
    </recordTypes>
    <recordTypes>
        <fullName>College</fullName>
        <active>true</active>
        <label>College</label>
    </recordTypes>
    <recordTypes>
        <fullName>High_School</fullName>
        <active>true</active>
        <label>High School</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>